--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ body {
 
 ul#media li{
     display: inline;
-    margin: 0.5em;
+    margin-right: 1em;
 }
 
 a {
@@ -38,4 +38,9 @@ ul.nav li{
     font-size: 0.5em;
     margin-left: 3.5em;
     margin-right: 3.5em;
+}
+
+footer{
+    font-size: x-small;
+    color: lightgray;
 }
