--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -1,2 +1,9 @@
 $base-font-family: 'Titillium Web', sans-serif;
 $body-font-family: 'Raleway', sans-serif;
+
+$base-font-color: rgb(19, 18, 18);
+$lighter-font-color: lightgray;
+$second-font-color: cadetblue;
+$feup-color: rgb(100, 5, 5);
+
+$background-color: #F8F8F8;
