--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -44,7 +44,7 @@ footer {
     color: $lighter-font-color;
 }
 
-h4 {
+h1 {
     font-family: $body-font-family;
 }
 
@@ -56,8 +56,8 @@ h4 {
 }
 
 #date{
-    font-style: italic;
+    /*font-style: italic;*/
     color: $second-font-color;
-    font-size: 0.75em;
+    font-size: 0.8em;
 }
 
