--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,17 +6,17 @@
     {% include navbar.html %}
     <div class="container mt-5">
         <div class="row justify-content-center mt-5">
-            <div class="col-md-4 offset-md-6">
+            <div class="col-md-4">
                 <h1 class="text-center mt-3">{{page.title}}</h1>
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-md-4 offset-md-6">
+            <div class="col-md-4">
                 <p id="date" class="text-center">{{page.date | date_to_long_string}}</p>
             </div>
         </div>
         <div class="row justify-content-center mt-4">
-            <div class="col-md-8 offset-md-6">
+            <div class="col-md-8">
                 {{content}}
             </div>
         </div>
