--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 <ul class="nav nav-pills justify-content-center mt-3 mb-5">
     <li><a href="/index.html#me">Me, Myself and I</a></li>
     <li><a class="mx-3"> &#9670</a></li>
-    <li><a href="img/resume.pdf">CV</a></li>
+    <li><a href="/img/resume.pdf">CV</a></li>
     <li><a class="mx-3"> &#9670</a></li>
     <li><a href="/index.html#blog">Blog</a></li>
 </ul>
