--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -2,6 +2,7 @@
 
 body {
     font-family: $base-font-family;
+    font-size: 1.5em;
     color: $base-font-color;
     background-color: $background-color; 
 }
@@ -49,10 +50,9 @@ h1 {
 }
 
 #blog h5{
-    color: $second-font-color;
+    color: darken($second-font-color, 10%);
     font-size: 1em;
-    font-family: 'Raleway', sans-serif;
-    font-weight: bold;
+    font-family: $body-font-family;
 }
 
 #date{
