--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -2,7 +2,7 @@ $base-font-family: 'Titillium Web', sans-serif;
 $body-font-family: 'Raleway', sans-serif;
 
 $base-font-color: rgb(19, 18, 18);
-$lighter-font-color: lightgray;
+$lighter-font-color: #B6B3B3;
 $second-font-color: cadetblue;
 $feup-color: rgb(100, 5, 5);
 
