--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -33,6 +33,11 @@ a {
     color: $feup-color;
 }
 
+#work {
+    color: $lighter-font-color;
+    font-size: 0.75em;
+}
+
 ul.nav li{
     color: $lighter-font-color;
     font-size: 0.75em;
