--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,4 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/main.css">
+    {% if site.title %}
+    <title>{{site.title}}</title>
+    {% endif %}
 </head>
