--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,7 @@
 <footer>
-    <div class="row justify-content-center mt-5">
-        <p><i class="fa fa-copyright"></i> {{site.copyright_note}}</p>
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <p><i class="fa fa-copyright"></i> {{site.copyright_note}}</p>
+        </div>
     </div>
 </footer>
